[Enhance][Sean] Track auth providers and enhance Google redirect flow
